# notif

./: Cargo.toml  README.md
misc/: emerge_notif-prompts.patch  notif-example-conf.yaml  notif-template.yaml  test.yaml
src/: config.rs  lib.rs  main.rs  notif.rs  run.rs
