[package]
name        = "notif"
version     = "0.0.3"
authors     = ["William <william@undefined.re>"]
edition     = "2018"
license     = "GPL-2.0"
description = "route remote notifications to current desktop"
homepage    = "https://github.com/Wonko7/rust-notif"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap        = { git = "https://github.com/clap-rs/clap/" }
dirs        = "2.0.2"
failure     = "0.1.6"
hostname    = "0.3.0"
serde       = { version = "1.0", features = ["derive"] }
signal-hook = "0.1.13"
toml        = "0.5.6"
zmq         = "0.9.2"
